Fix horizontal scrolling on mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -183,6 +183,7 @@ header .mobile {
   }
 
   #sign-up-cta .content {
+    width: 100%;
     margin-top: 0;
   }
 
